# plateforme-agent-coolify

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  coolify.py  db.py  hosting.py  lab_media.py  lab_scenes.py  legal.py  mailer.py  main.py  models.py  openrouter.py  promo.py  provisioning.py  security.py  stripe_pay.py
app/static/: agent-awake.webm  index.html  lab-account.webm  lab-alive.webm  lab-birth.webm  lab-delete.webm  lab-deploy.webm  lab-deploying.webm  lab-dormant.webm  lab-email.webm  lab-intro.webm  lab-name.webm  lab-password.webm  lab-sub.webm
design/: DESIGN.md
docs/: RGPD.md
tests/: test_app.py
